--- a/article/templates/index.html
+++ b/article/templates/index.html
@@ -1,10 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>{{hello}}</h1>
-</body>
-</html>
+{% extends 'blog_base.html' %}
+{% block content %}
+<div id="sliders">
+
+</div>
+<div class="post-header"></div>
+<section class="content-wrap">
+    <div class="container">
+        <div class="row">
+            <aside class="col-md-1 sidebar">
+            </aside>
+
+            <main class="col-md-7 main-content">
+                {% for article in articles %}
+                <article id= "{{article.id}}" class="post">
+                    <header class="entry-header">
+                        <h2 class="entry-title" itemprop="name headline">
+                            <a href="" rel="bookmark">{{ article.title }}</a>
+                        </h2>
+
+
+                        <div class="entry-meta">
+                            <time class="entry-date" datetime="2016-11-01T13:30:16+00:00" pubdate itemprop="datePublished">{{article.create_time}}</time>
+                            <span class="dot">&bull;</span> <span class="categories-links" itemprop="keywords"><a href="" title="" rel="category tag">分类</a></span>
+                            <span class="dot">&bull;</span> <a href="" class="comments-link"  title="">9 条评论</a>
+                        </div>
+                    </header>
+
+                    <div class="entry-summary" itemprop="articleBody">
+						<p id="summary_{{ article.summary }}">
+							{{ article.summary }}
+						</p>
+					</div>
+
+                   <footer class="entry-footer">
+					    <a href="" rel="nofollow" class="more-link">全文阅读 &raquo;</a>
+                       <span class="tags-links" itemprop="keywords"><a href="" rel="tag">{{article.tags}}</a></span>
+                   </footer>
+
+                </article>
+                {% endfor %}
+            </main>
+            <aside class="col-md-3 sidebar">
+                <div class="widget"></div>
+            </aside>
+        </div>
+    </div>
+</section>
+
+{% endblock %}
