--- a/article/templates/blog_nav.html
+++ b/article/templates/blog_nav.html
@@ -8,26 +8,23 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-respond">
-                <li><a href="">首页</a></li>
-                <li><a href="#">关于</a></li>
-                <li><a id="newtp" href="">创建话题</a></li>
+                <li><a href="/blog">首页</a></li>
+                <li><a href="#">测试</a></li>
+                <li><a id="" href="/article/publish">写文章</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-respond">
                 <form action="" method="post" target="_blank" class="navbar-form navbar-right">
                     <div class="form-group" style="width: 245px;">
-                        <input name="" type="text" class="form-control search-bar" placeholder="话题">
+                        <input name="" type="text" class="form-control search-bar" placeholder="文章...">
                         <i class=""></i>
                     </div>
                 </form>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-
-
                 <li><a href="">注册</a></li>
                 <li id="login-link">
                     <a data-toggle="modal" data-target="#login" href="#">登入</a>
                 </li>
-
             </ul>
         </div>
     </div>
@@ -35,6 +32,6 @@
 
 <div class="jumbotron alert-info slogan">
     <p>
-        <img src="/static/image/chen.png" width="50" alt="星空" title="星空"/>
+        <img src="/static/image/chen.png" width="50"  title="梦想"/>
     </p>
 </div>
