--- a/article/templates/blog_base.html
+++ b/article/templates/blog_base.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+    <title>{% block title%}{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/beauty.css">
     <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    {% block extra_head %}{% endblock %}
 </head>
 <body>
 {% block nav %}
@@ -16,7 +19,9 @@
 
 {% block content %}{% endblock %}
 
-{% block footer %}{% endblock %}
+{% block footer %}
+{% include "footer.html" %}
+{% endblock %}
 
 {% block scripts %}{% endblock %}
 
