自定义过滤器，使文章内容markdown化

--- a/article/templates/article_detail.html
+++ b/article/templates/article_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog_base.html' %}
+{% load custom_markdown %}
 {% block title%}
 {{article.title}}
 {% endblock %}
@@ -20,16 +21,14 @@
                         </h2>
 
                         <div class="entry-meta">
-                            <time class="entry-date">{{article.create_time}}</time>
+                            <time class="entry-date">{{article.create_time|date:"Y-m-d"}}</time>
                             <span class="dot">&bull;</span> <span class="categories-links" itemprop="keywords"><a
                                 href="" title="" rel="category tag">分类</a></span>
                             <span class="dot">&bull;</span> <a href="" class="comments-link" title="">9 条评论</a>
                         </div>
                     </header>
                      <div class="entry-content" itemprop="articleBody">
-                          {% autoescape off %}
-                          {{ article.content_html }}
-                          {% endautoescape %}
+                          {{ article.content_md|custom_markdown }}
                      </div>
                      <footer class="entry-footer">
                         <span class="tags-links" itemprop="keywords"><a href="" rel="tag">{{article.tags}}</a></span>
