--- a/article/templates/blog_nav.html
+++ b/article/templates/blog_nav.html
@@ -2,7 +2,7 @@
      data-nav="#">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/blog">
                 <img src="/static/image/logo.png" width="40" title=""/>
             </a>
         </div>
@@ -21,7 +21,7 @@
                 </form>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="">注册</a></li>
+                <li><a href="/user/register">注册</a></li>
                 <li id="login-link">
                     <a data-toggle="modal" data-target="#login" href="#">登入</a>
                 </li>
