--- a/article/templates/footer.html
+++ b/article/templates/footer.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="text-center" id="all-rights">
-                    Copyright&nbsp;&copy;&nbsp;2015&nbsp;<a href="#">www.yech.me</a>&nbsp;All
+                    Copyright&nbsp;&copy;&nbsp;2015&nbsp;<a href="#">www.yech.site</a>&nbsp;All
                     rights reserved.
                 </div>
             </div>
