--- a/article/templates/register.html
+++ b/article/templates/register.html
@@ -1,101 +1,88 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1,minimum-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <title>星空注册</title>
-    <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
-    <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+{% extends 'blog_base.html' %}
+{% block title%}
+注册 | yech.site
+{% endblock %}
 
-    <script type="text/javascript">
-	$(function(){
-		$("button[type='button']").click(function(){
-			if($.trim($("#email").val()) == ''){
-				alert("一个邮箱都不给我!");
-				return false;
-			}
-			if($.trim($("#username").val()) == ''){
-				alert("好歹搞个昵称吧，亲!");
-				return false;
-			}
-			if($.trim($("#password").val()) == ''){
-				alert("没密码？逗我呢!");
-				return false;
-			}
-			$("#reg_form").submit();
-		});
-	})
+{% block extra_head %}{% endblock %}
 
-
-
-    </script>
-</head>
-<body>
+{% block content %}
 
 <div class="row">
     <div class="col-sm-4 col-sm-offset-4 ">
-        <a href="homepage" class="thumbnail">
-            <img src="" alt="星空">
+        <a href="/blog" class="thumbnail">
+            <img src="/static/image/logo.png" title="yech.site">
         </a>
     </div>
 </div>
 
 <section class="content-wrap">
     <div class="container">
+          {% if form.non_field_errors %}
+          <div class="messages">
+            <div class="alert alert-warning alert-dismissible" role="alert">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              {{ form.non_field_errors }}
+            </div>
+          </div>
+         {% endif %}
         <div class="row">
-            <aside class="col-sm-3 sidebar">
-                <div class="widget"></div>
+            <aside class="col-sm-4 sidebar">
             </aside>
-            <main class="col-sm-7 main-content">
+            <main class="col-sm-4 main-content">
 
-                <form action="regist" class="form-horizontal" id="reg_form" method="post">
-                    <div class="form-group has-success">
-                        <label class="col-sm-2 control-label">邮箱</label>
-                        <div class="col-sm-6 input-group">
-						<span class="input-group-addon">
-							<img alt="" src="" width="15">
-						</span>
-                            <input id="email" name="email" type="text" class="form-control" placeholder="您的邮箱">
-                        </div>
-                        <div class="col-sm-offset-2 input-group"><font color="RED"></font></div>
+                <form action="" class="form-horizontal" id="reg_form" method="post">{% csrf_token %}
+                    <div class="form-group {% if form.email.errors %} has-error {% endif %}">
+                        <label class="">{{ form.email.label }}</label>
+                         {% if form.email.errors %}
+                            <span class="text-danger pull-right">{{ form.email.errors }}</span>
+                        {% endif %}
+                        {{ form.email }}
                     </div>
-                    <div class="form-group has-success">
-                        <label class="col-sm-2 control-label">用户名</label>
-                        <div class="col-sm-6 input-group">
-						<span class="input-group-addon">
-							<img alt="" src="" width="15">
-						</span>
-                            <input id="username" name="username" type="text" class="form-control" placeholder="您的昵称">
-                        </div>
-                        <div class="col-sm-offset-2 input-group"><font color="RED"></font>
-                        </div>
+                    <div class="form-group {% if form.username.errors %} has-error {% endif %}">
+                        <label class="">{{ form.username.label }}</label>
+                         {% if form.username.errors %}
+                            <span class="text-danger pull-right">{{ form.username.errors }}</span>
+                        {% endif %}
+                        {{ form.username }}
                     </div>
-                    <div class="form-group has-success">
-                        <label class="col-sm-2 control-label">密码</label>
-                        <div class="col-sm-6 input-group">
-						<span class="input-group-addon">
-							<img alt="" src="imgs/eye.png" width="15">
-						</span>
-                            <input id="password" name="password" type="password" class="form-control"
-                                   placeholder="您的密码">
-                        </div>
-                        <div class="col-sm-offset-2 input-group"><font color="RED"></font>
-                        </div>
+                    <div class="form-group {% if form.password.errors %} has-error {% endif %}">
+                        <label class="">{{ form.password.label }}</label>
+                         {% if form.password.errors %}
+                            <span class="text-danger pull-right">{{ form.password.errors }}</span>
+                        {% endif %}
+                        {{ form.password }}
                     </div>
-                    <button type="button"
-                            class="col-sm-6 col-sm-offset-2 btn btn-primary">创建新账号
-                    </button>
+                    <div class="form-group {% if form.confirm_password.errors %} has-error {% endif %}">
+                        <label class="">{{ form.confirm_password.label }}</label>
+                         {% if form.confirm_password.errors %}
+                            <span class="text-danger pull-right">{{ form.confirm_password.errors }}</span>
+                        {% endif %}
+                        {{ form.confirm_password }}
+                    </div>
+                    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                      <div class="btn-group" role="group">
+                        <button type="submit" id="register" class="btn btn-primary">注册</button>
+                      </div>
+                        <div class="btn-group" role="group">
+                        <button type="button" id="forget" class="btn btn-primary">忘记密码</button>
+                      </div>
+                      <div class="btn-group" role="group">
+                        <button type="button" id="login" class="btn btn-primary">登入</button>
+                      </div>
+                    </div>
                 </form>
             </main>
-            <aside class="col-sm-2 sidebar">
-                <div class="widget"></div>
+            <aside class="col-sm-4 sidebar">
             </aside>
         </div>
     </div>
 </section>
+{% endblock %}
 
-
-</body>
-</html>
+{% block script%}
+	$(function(){
+		$("button[id='register']").click(function(){
+			$("#reg_form").submit();
+		});
+	})
+{% endblock %}
