完成登录功能，修复一些问题

--- a/article/static/css/style.css
+++ b/article/static/css/style.css
@@ -140,12 +140,9 @@ i {
 	padding-bottom: 10px;
 }
 
-.close-slagan{
+.close-slogan{
 	margin-right:20px;
 	margin-bottom:50px;
 	float: right;
-}
-.user{
-	margin-top:15px;
 }
 
