--- a/article/templates/article_detail.html
+++ b/article/templates/article_detail.html
@@ -18,6 +18,7 @@
                     <header class="entry-header">
                         <h2 class="entry-title">
                             {{ article.title }}
+                            <img src="/static/image/logo.png" class="more-link" title="{{ request.user.username}}">
                         </h2>
 
                         <div class="entry-meta">
