--- a/article/templates/index.html
+++ b/article/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'blog_base.html' %}
 {% block title%}
-blog | yech.site
+首页 | yech.site
 {% endblock %}
 {% block content %}
 <div id="sliders">
@@ -17,19 +17,20 @@ blog | yech.site
                 {% for article in articles %}
                 <article id="{{article.id}}" class="post">
                     <header class="entry-header">
-                        <h2 class="entry-title" itemprop="name headline">
+                        <h2 class="entry-title">
                             <a href="{% url 'blog:article_detail' article.id %}" rel="">{{ article.title }}</a>
+                            <img src="/static/image/logo.png" class="more-link" title="{{ request.user.username}}">
                         </h2>
 
                         <div class="entry-meta">
                             <time class="entry-date">{{article.create_time|date:"Y-m-d"}}</time>
-                            <span class="dot">&bull;</span> <span class="categories-links" itemprop="keywords"><a
+                            <span class="dot">&bull;</span> <span class="categories-links"><a
                                 href="" title="" rel="category tag">分类</a></span>
                             <span class="dot">&bull;</span> <a href="" class="comments-link" title="">9 条评论</a>
                         </div>
                     </header>
 
-                    <div class="entry-summary" itemprop="articleBody">
+                    <div class="entry-summary">
                         <p id="summary_{{ article.summary }}">
                         <h5>{{ article.summary }}</h5>
                         </p>
