--- a/article/templates/publish.html
+++ b/article/templates/publish.html
@@ -1,6 +1,6 @@
 {% extends 'blog_base.html' %}
 {% block title%}
-编辑文章
+编辑文章 | yech.site
 {% endblock %}
 {% block extra_head %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
