--- a/article/templates/blog_base.html
+++ b/article/templates/blog_base.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="/static/image/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/image/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="/static/css/beauty.css">
