--- a/article/templates/register.html
+++ b/article/templates/register.html
@@ -80,9 +80,11 @@
 {% endblock %}
 
 {% block script%}
-	$(function(){
+<script type="text/javascript">
+    $(function(){
 		$("button[id='register']").click(function(){
 			$("#reg_form").submit();
 		});
 	})
+</script>
 {% endblock %}
