--- a/article/templates/article_detail.html
+++ b/article/templates/article_detail.html
@@ -14,31 +14,83 @@
         <div class="row">
             <aside class="col-md-1 sidebar"></aside>
             <main class="col-md-7 main-content">
-                 <article id="{{article.id}}" class="post">
+                <article id="{{article.id}}" class="post">
                     <header class="entry-header">
                         <h2 class="entry-title">
                             {{ article.title }}
-                            <img src="/static/image/logo.png" class="more-link" title="{{ request.user.username}}">
+                            <img src="/static/image/logo.png" class="user-img" title="{{ article.user.username}}">
                         </h2>
 
                         <div class="entry-meta">
                             <time class="entry-date">{{article.create_time|date:"Y-m-d"}}</time>
                             <span class="dot">&bull;</span> <span class="categories-links"><a
                                 href="" title="" rel="category tag">分类</a></span>
-                            <span class="dot">&bull;</span> <a href="" class="comments-link" title="">{{article.read_count}} 次阅读</a>
+                            <span class="dot">&bull;</span> <a href="" class="comments-link" title="">{{article.read_count}}
+                            次阅读</a>
                         </div>
                     </header>
-                     <div class="entry-content">
-                          {{ article.content_md|custom_markdown }}
-                     </div>
-                     <footer class="entry-footer">
-                         {% for tag in article.tags %}
+                    <div class="entry-content">
+                        {{ article.content_md|custom_markdown }}
+                    </div>
+                    <footer class="entry-footer">
+                        {% for tag in article.tags %}
                         <span class="tags-links"><a href="" rel="tag">{{tag}}</a></span>
-                         {% endfor %}
+                        {% endfor %}
                     </footer>
-                 </article>
+                </article>
             </main>
         </div>
     </div>
 </section>
+<section class="content-wrap">
+    <div class="container">
+        <div class="row">
+            <aside class="col-md-1 sidebar"></aside>
+            <main class="col-md-7 main-content">
+                <div id="comments"><h3 id="comments-title">{{replies|length}} 条评论</h3></div>
+
+                <div class="post" id="reply_{{reply.author.username}}">
+                    {% for reply in replies %}
+                    <div class="post-footer">
+                        <div class="comment-author">
+                            <img src="/static/image/logo.png" class="author-img">
+                            <cite class="fn url">{{reply.author.username}}</cite>
+                            <time>{{reply.reply_time|date:'Y-m-d'}}</time>
+                            <time><a href="javascript:viod(0)" name="reply">回复&nbsp;&nbsp;</a></time>
+                        </div>
+                        <div class="comment-content">
+                            <p>{{reply.content}}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+
+                <div id="respond">
+                        <form action="{% url 'blog:reply' article.id %}" method="post">{% csrf_token %}
+                            <div class="form-group">
+                                 <textarea class="form-control" name="reply_content" id="reply_area" rows="6" placeholder="留下足迹才美丽..."></textarea>
+                            </div>
+                            <footer class="entry-footer">
+                                <button class="btn btn-primary reply" type="submit">回复</button>
+                            </footer>
+                        </form>
+                    </div>
+            </main>
+        </div>
+    </div>
+</section>
+
+{% endblock %}
+{% block scripts %}
+<script type="text/javascript">
+    $(function(){
+        $("a[name='reply']").click(function(){
+            //获取当前<cite>的值（因为<cite>标签不止一个）
+           var username = $("a[name='reply']").parent().parent().children().eq(1).text();
+           var value = $("#reply_area").val()+"@"+username+" ";
+           $("#reply_area").val(value);
+           $("#reply_area").focus();
+        });
+    })
+</script>
 {% endblock %}
