--- a/article/templates/blog_nav.html
+++ b/article/templates/blog_nav.html
@@ -2,15 +2,17 @@
      data-nav="#">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/blog">
-                <img src="/static/image/logo.png" title=""/>
+            <a class="" href="/blog">
+                <img src="/static/image/logo.png" title="www.yech.site"/>
             </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-respond">
                 <li><a href="/blog">首页</a></li>
                 <li><a href="#">测试</a></li>
+                {% if user.is_staff %}
                 <li><a id="" href="/article/publish">写文章</a></li>
+                {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-respond">
                 <form action="" method="post" target="_blank" class="navbar-form navbar-right">
@@ -27,7 +29,7 @@
                 <li><a href="/accounts/logout">注销</a></li>
                 {% else %}
                 <li><a href="/accounts/loginpage">登入</a></li>
-                {{% endif %}
+                {% endif %}
             </ul>
         </div>
     </div>
