--- a/article/templates/index.html
+++ b/article/templates/index.html
@@ -25,7 +25,7 @@
                         <div class="entry-meta">
                             <time class="entry-date">{{article.create_time|date:"Y-m-d"}}</time>
                             <span class="dot">&bull;</span> <span class="categories-links"><a
-                                href="" title="" rel="category tag">分类</a></span>
+                                href="" title="" rel="category tag">{{article.category.category_name}}</a></span>
                             <span class="dot">&bull;</span> <a href="" class="comments-link" title="">{{article.comment_nums}} 条评论</a>
                         </div>
                     </header>
