--- a/article/templates/blog_nav.html
+++ b/article/templates/blog_nav.html
@@ -9,7 +9,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-respond">
                 <li><a href="/blog">首页</a></li>
-                <li><a href="#">文章归档</a></li>
+                <li><a href="/article/archive">文章归档</a></li>
                 {% if user.is_authenticated %}
                 <li><a id="" href="/article/publish">写文章</a></li>
                 {% endif %}
