--- a/article/templates/archive.html
+++ b/article/templates/archive.html
@@ -1,4 +1,5 @@
 {% extends 'blog_base.html' %}
+{% load get_dict_item %}
 {% block title%}
 文章归档 | yech.site
 {% endblock %}
@@ -11,18 +12,18 @@
             <main class="col-md-7 main-content">
                 <article  class="post">
                     <header class="entry-header">
-                        <h1 class="entry-title">文章归档</h1>
+                        <h1 class="entry-title archive-title">文章归档</h1>
                     </header>
                     <div class="entry-content">
                         <ul>
                             {% for date in data_list %}
                                 <li>
-                                    <b><a href="">{{date.year}}年{{date.month}}月</a></b>
-                                    <span>({{date.article_list|length}} 篇文章)</span>
+                                    <b><a href="{% url 'blog:search_archive' date.year date.month%}">{{date.year}}年{{date.month}}月</a></b>
+                                    <span>({{article_dict|get_dict_item:date|length}} 篇文章)</span>
                                     <ul>
-                                        {% for article in date.article_list %}
+                                        {% for article in article_dict|get_dict_item:date %}
                                         <li>
-                                            <a href="">{{article.title}}</a>
+                                            <a href="{% url 'blog:article_detail' article.id %}">{{article.title}}</a>
                                             <span>({{article.comment_nums}})</span>
                                         </li>
                                         {% endfor %}
