--- a/article/templates/archive.html
+++ b/article/templates/archive.html
@@ -9,7 +9,7 @@
         <div class="row">
             <aside class="col-md-1 sidebar">
             </aside>
-            <main class="col-md-7 main-content">
+            <main class="col-md-8 main-content">
                 <article  class="post">
                     <header class="entry-header">
                         <h1 class="entry-title archive-title">文章归档</h1>
@@ -18,7 +18,7 @@
                         <ul>
                             {% for date in data_list %}
                                 <li>
-                                    <b><a href="{% url 'blog:search_archive' date.year date.month%}">{{date.year}}年{{date.month}}月</a></b>
+                                    <b><a href="">{{date.year}}年{{date.month}}月</a></b>
                                     <span>({{article_dict|get_dict_item:date|length}} 篇文章)</span>
                                     <ul>
                                         {% for article in article_dict|get_dict_item:date %}
