--- a/article/templates/blog_nav.html
+++ b/article/templates/blog_nav.html
@@ -24,7 +24,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/accounts/register">注册</a></li>
-                {% if request.user.is_authenticated %}
+                {% if request.user.is_staff %}
                 <li><a href="">{{request.user.username}}</a></li>
                 <li><a href="/accounts/logout">注销</a></li>
                 {% else %}
