--- a/article/templates/article_detail.html
+++ b/article/templates/article_detail.html
@@ -24,8 +24,8 @@
                         <div class="entry-meta">
                             <time class="entry-date">{{article.create_time|date:"Y-m-d"}}</time>
                             <span class="dot">&bull;</span> <span class="categories-links"><a
-                                href="" title="" rel="category tag">{{article.category.category_name}}</a></span>
-                            <span class="dot">&bull;</span> <a href="" class="comments-link" title="">{{article.read_count}}
+                                href="{% url 'blog:search_category' article.category.category_name 1%}" title="" rel="category tag">{{article.category.category_name}}</a></span>
+                            <span class="dot">&bull;</span> <a href="#" class="comments-link" title="">{{article.read_count}}
                             次阅读</a>
                         </div>
                     </header>
@@ -34,7 +34,7 @@
                     </div>
                     <footer class="entry-footer">
                         {% for tag in article.tags %}
-                        <span class="tags-links"><a href="" rel="tag">{{tag}}</a></span>
+                        <span class="tags-links"><a href="{% url 'blog:search_tag' tag 1%}" rel="tag">{{tag}}</a></span>
                         {% endfor %}
                     </footer>
                 </article>
@@ -91,7 +91,7 @@
                     </header>
                     <div class="">
                         {% for tag_info in tag_info_list %}
-                        <a href="" style="font-size:{{tag_info.tag_size}}px; color:{{tag_info.tag_color}}">{{tag_info.tag_name}}</a>
+                        <a href="{% url 'blog:search_tag' tag_info.tag_name 1%}" style="font-size:{{tag_info.tag_size}}px; color:{{tag_info.tag_color}}">{{tag_info.tag_name}}</a>
                         {% endfor %}
                     </div>
                 </div>
