--- a/article/templates/index.html
+++ b/article/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'blog_base.html' %}
 {% block title%}
-首页 | yech.site
+{{ html_title }} | yech.site
 {% endblock %}
 {% block content %}
 <div id="sliders">
@@ -25,8 +25,8 @@
                         <div class="entry-meta">
                             <time class="entry-date">{{article.create_time|date:"Y-m-d"}}</time>
                             <span class="dot">&bull;</span> <span class="categories-links"><a
-                                href="{% url 'blog:search_category' article.category.category_name %}" title="" rel="category tag">{{article.category.category_name}}</a></span>
-                            <span class="dot">&bull;</span> <a href="" class="comments-link" title="">{{article.comment_nums}} 条评论</a>
+                                href="{% url 'blog:search_category' article.category.category_name 1%}" title="" rel="category tag">{{article.category.category_name}}</a></span>
+                            <span class="dot">&bull;</span> <a href="#" class="comments-link" title="">{{article.comment_nums}} 条评论</a>
                         </div>
                     </header>
 
@@ -39,7 +39,7 @@
                     <footer class="entry-footer">
                         <a href="{% url 'blog:article_detail' article.id %}" rel="nofollow" class="more-link">全文阅读 &raquo;</a>
                         {% for tag in article.tags %}
-                        <span class="tags-links"><a href="" rel="tag">{{tag}}</a></span>
+                        <span class="tags-links"><a href="{% url 'blog:search_tag' tag 1%}" rel="tag">{{tag}}</a></span>
                          {% endfor %}
                     </footer>
 
@@ -71,7 +71,7 @@
                     </header>
                     <div class="">
                         {% for tag_info in tag_info_list %}
-                        <a href="" style="font-size:{{tag_info.tag_size}}px; color:{{tag_info.tag_color}}">{{tag_info.tag_name}}</a>
+                        <a href="{% url 'blog:search_tag' tag_info.tag_name 1%}" style="font-size:{{tag_info.tag_size}}px; color:{{tag_info.tag_color}}">{{tag_info.tag_name}}</a>
                         {% endfor %}
                     </div>
                 </div>
